--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -1,16 +1,20 @@
 {
-  "private": true,
   "name": "@xlorpaste/worker",
   "version": "1.0.0",
+  "private": true,
   "description": "A template for kick starting a Cloudflare Workers project",
-  "main": "index.js",
+  "license": "MIT",
+  "author": "XLor <yjl9903@vip.qq.com>",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup src/index.ts",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
-  "author": "XLor <yjl9903@vip.qq.com>",
-  "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.3.2"
+    "@cloudflare/workers-types": "^3.0.0",
+    "@types/service-worker-mock": "^2.0.1",
+    "prettier": "^2.3.2",
+    "tsup": "^4.14.0",
+    "typescript": "^4.3.5"
   }
 }
