--- a/packages/worker/wrangler.toml
+++ b/packages/worker/wrangler.toml
@@ -5,3 +5,8 @@ workers_dev = true
 route = ""
 zone_id = ""
 compatibility_date = "2021-12-24"
+
+[build]
+command = "pnpm run build"
+[build.upload]
+format = "service-worker"
