--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -14,6 +14,7 @@
     "@cloudflare/workers-types": "^3.0.0",
     "@types/service-worker-mock": "^2.0.1",
     "prettier": "^2.3.2",
+    "pnpm": "^6.24.2",
     "tsup": "^4.14.0",
     "typescript": "^4.3.5"
   }
