--- a/packages/worker/tsconfig.json
+++ b/packages/worker/tsconfig.json
@@ -10,8 +10,12 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "esModuleInterop": true,
-    "types": ["@cloudflare/workers-types", "@types/service-worker-mock"]
+    "types": [
+      "@types/node",
+      "@cloudflare/workers-types",
+      "@types/service-worker-mock"
+    ]
   },
-  "include": ["src"],
+  "include": ["src", "types.d.ts"],
   "exclude": ["node_modules", "dist", "test"]
 }
