--- a/packages/worker/wrangler.toml
+++ b/packages/worker/wrangler.toml
@@ -2,9 +2,13 @@ name = "xlorpaste-worker"
 type = "javascript"
 
 workers_dev = true
+compatibility_date = "2021-12-24"
 account_id = "7cbfb60ad7052f0d8cf590a51e024987"
 route = "xlorpaste-worker.yjl9903.workers.dev/*"
-compatibility_date = "2021-12-24"
+
+kv_namespaces = [ 
+  { binding = "XLORPASTE", id = "<STORE>" }
+]
 
 [build]
 command = "npm install -g pnpm; pnpm install; pnpm run build"
@@ -14,3 +18,6 @@ format = "service-worker"
 [env.production]
 zone_id = "d46a34c01748b72153a78669c137092d"
 route = "api.xlorpaste.cn/*"
+kv_namespaces = [ 
+  { binding = "XLORPASTE", id = "<STORE>" }
+]
