--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -12,9 +12,10 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.0.0",
+    "@types/node": "^17.0.4",
     "@types/service-worker-mock": "^2.0.1",
-    "prettier": "^2.3.2",
     "pnpm": "^6.24.2",
+    "prettier": "^2.3.2",
     "tsup": "^4.14.0",
     "typescript": "^4.3.5"
   }
