--- a/packages/worker/wrangler.toml
+++ b/packages/worker/wrangler.toml
@@ -6,10 +6,6 @@ compatibility_date = "2021-12-24"
 account_id = "7cbfb60ad7052f0d8cf590a51e024987"
 route = "xlorpaste-worker.yjl9903.workers.dev/*"
 
-kv_namespaces = [ 
-  { binding = "XLORPASTE", id = "", preview_id = "<STORE>" }
-]
-
 [build]
 command = "npm install -g pnpm; pnpm install; pnpm run build"
 [build.upload]
@@ -18,6 +14,11 @@ format = "service-worker"
 [env.production]
 zone_id = "d46a34c01748b72153a78669c137092d"
 route = "api.xlorpaste.cn/*"
-kv_namespaces = [ 
+kv-namespaces = [ 
   { binding = "XLORPASTE", id = "<STORE>" }
+]
+
+[env.dev]
+kv-namespaces = [ 
+  { binding = "XLORPASTE", id = "", preview_id = "<STORE>" }
 ]
