fix: kv namespace

--- a/packages/worker/wrangler.toml
+++ b/packages/worker/wrangler.toml
@@ -6,6 +6,11 @@ compatibility_date = "2021-12-24"
 account_id = "7cbfb60ad7052f0d8cf590a51e024987"
 route = "xlorpaste-worker.yjl9903.workers.dev/*"
 
+[[kv-namespaces]]
+binding = "XLORPASTE"
+id = "4cb100568fb84072ba819d668aea818d"
+preview_id = "c6aa0006430a4f82911c6afceaa06e17"
+
 [build]
 command = "npm install -g pnpm; pnpm install; pnpm run build"
 [build.upload]
@@ -14,11 +19,3 @@ format = "service-worker"
 [env.production]
 zone_id = "d46a34c01748b72153a78669c137092d"
 route = "api.xlorpaste.cn/*"
-kv-namespaces = [ 
-  { binding = "XLORPASTE", id = "<STORE>" }
-]
-
-[env.dev]
-kv-namespaces = [ 
-  { binding = "XLORPASTE", id = "", preview_id = "<STORE>" }
-]
