--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup src/index.ts",
-    "dev": "wrangler dev --env dev"
+    "dev": "wrangler dev"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.0.0",
