--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "pnpm -C packages/app build",
     "dev:app": "pnpm -C packages/app dev",
     "dev:worker": "pnpm -C packages/worker dev",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "format": "prettier --write '**/*.{js,ts,css,json,md}'"
   },
   "lint-staged": {
     "*.ts": [
