--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,6 @@
 {
+  "semi": true,
   "singleQuote": true,
-  "semi": false,
-  "trailingComma": "all",
-  "tabWidth": 2,
-  "printWidth": 80
+  "printWidth": 100,
+  "trailingComma": "none"
 }
