--- a/packages/worker/tsconfig.json
+++ b/packages/worker/tsconfig.json
@@ -10,11 +10,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "esModuleInterop": true,
-    "types": [
-      "@types/node",
-      "@cloudflare/workers-types",
-      "@types/service-worker-mock"
-    ]
+    "types": ["@types/node", "@cloudflare/workers-types", "@types/service-worker-mock"]
   },
   "include": ["src", "types.d.ts"],
   "exclude": ["node_modules", "dist", "test"]
