--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@unocss/preset-uno": "^0.18.0",
+    "@unocss/preset-wind": "^0.18.0",
     "@vitejs/plugin-vue": "^2.0.0",
     "typescript": "^4.4.4",
+    "unocss": "^0.18.0",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
   }
