--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "private": "true",
-  "description": "",
   "license": "MIT",
   "author": "XLor",
   "scripts": {
-    "build": "pnpm -C packages/app build",
+    "build": "pnpm run build --filter ./packages",
     "dev:app": "pnpm -C packages/app dev",
     "dev:worker": "pnpm -C packages/worker dev",
     "format": "prettier --write packages/**/*.{ts,js,vue} --ignore-path .gitignore"
@@ -22,6 +21,7 @@
     "pnpm": "^6.24.2",
     "prettier": "^2.3.2",
     "tsup": "^4.14.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "xlorpaste": "workspace:*"
   }
 }
