--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "xlorpaste": "workspace:*"
   },
   "devDependencies": {
     "@iconify/json": "^1.1.450",
