--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "vue-tsc --noEmit -p package.json --resolveJsonModule --skipLibCheck && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,6 +21,6 @@
     "unocss": "^0.18.0",
     "unplugin-icons": "^0.13.0",
     "vite": "^2.7.2",
-    "vue-tsc": "^0.29.8"
+    "vue-tsc": "^0.30.2"
   }
 }
