--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,7 +25,9 @@
     "build": "tsup src/index.ts src/cli.ts --dts"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cac": "^6.7.12",
+    "kolorist": "^1.5.1",
     "resolve-from": "^5.0.0"
   },
   "devDependencies": {
