--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "author": "XLor",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "bin": {
     "xlorpaste": "bin/cli.js"
@@ -22,7 +23,7 @@
     "src"
   ],
   "scripts": {
-    "build": "tsup src/index.ts src/cli.ts --dts"
+    "build": "tsup src/index.ts src/cli.ts --dts --format esm,cjs"
   },
   "dependencies": {
     "axios": "^0.24.0",
