--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cac": "^6.7.12",
+    "js-base64": "^3.7.2",
     "kolorist": "^1.5.1",
     "resolve-from": "^5.0.0"
   },
