--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,8 @@ jobs:
           cache: pnpm
       - run: pnpm install
       - run: pnpm run build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./packages/app/dist
