--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,7 +3,7 @@
   "name": "@xlorpaste/app",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vue-tsc --noEmit -p package.json --resolveJsonModule --skipLibCheck && vite build",
     "preview": "vite preview"
   },
