--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-staged": "^11.0.0",
     "pnpm": "^6.24.2",
     "prettier": "^2.3.2",
+    "tslib": "^2.3.1",
     "tsup": "^4.14.0",
     "typescript": "^4.3.5",
     "xlorpaste": "workspace:*"
