--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -20,6 +20,7 @@
     "@unocss/preset-uno": "^0.18.0",
     "@unocss/preset-wind": "^0.18.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "tslib": "^2.3.1",
     "typescript": "^4.4.4",
     "unocss": "^0.18.0",
     "unplugin-icons": "^0.13.0",
