--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -10,6 +10,8 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
     "paths": {
       "xlorpaste": ["../cli/src/index.ts"]
     }
