--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,6 +33,7 @@
     "resolve-from": "^5.0.0"
   },
   "devDependencies": {
+    "tslib": "^2.3.1",
     "tsup": "^4.14.0",
     "typescript": "^4.4.4"
   },
