--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "pnpm run build --filter ./packages",
     "dev:app": "pnpm -C packages/app dev",
     "dev:worker": "pnpm -C packages/worker dev",
-    "format": "prettier --write packages/**/*.{ts,js,vue} --ignore-path .gitignore"
+    "format": "prettier --write packages/**/*.{ts,js,mjs,vue} --ignore-path .gitignore",
+    "release": "zx scripts/release.mjs"
   },
   "husky": {
     "hooks": {
@@ -29,6 +30,7 @@
     "tslib": "^2.3.1",
     "tsup": "^4.14.0",
     "typescript": "^4.4.4",
-    "xlorpaste": "workspace:*"
+    "xlorpaste": "workspace:*",
+    "zx": "^4.2.0"
   }
 }
