--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:app": "pnpm -C packages/app dev",
     "dev:worker": "pnpm -C packages/worker dev",
     "format": "prettier --write packages/**/*.{ts,js,mjs,vue} --ignore-path .gitignore",
+    "publish": "pnpm publish -r --access public",
     "release": "zx scripts/release.mjs"
   },
   "husky": {
