--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0-rc.1",
+    "date-fns": "^2.28.0",
     "github-markdown-css": "^5.1.0",
     "qrcode": "^1.5.0",
     "shiki": "^0.10.0",
