--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,6 +11,7 @@
     "@chenfengyuan/vue-qrcode": "^2.0.0-rc.1",
     "date-fns": "^2.28.0",
     "github-markdown-css": "^5.1.0",
+    "katex": "^0.15.2",
     "markdown-it": "^12.3.2",
     "qrcode": "^1.5.0",
     "shiki": "^0.10.0",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@iconify/json": "^1.1.450",
+    "@types/katex": "^0.11.1",
     "@unocss/preset-uno": "^0.18.0",
     "@unocss/preset-wind": "^0.18.0",
     "@vitejs/plugin-vue": "^2.0.0",
