--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,6 +13,7 @@
     "github-markdown-css": "^5.1.0",
     "katex": "^0.15.2",
     "markdown-it": "^12.3.2",
+    "markdown-it-math": "^4.1.1",
     "qrcode": "^1.5.0",
     "shiki": "^0.10.0",
     "vue": "^3.2.29",
