--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   "devDependencies": {
     "husky": "^1.2.0",
     "lint-staged": "^11.0.0",
-    "pnpm": "^6.24.2",
+    "pnpm": "^7.0.0",
     "prettier": "^2.3.2",
     "tslib": "^2.3.1",
     "tsup": "^4.14.0",
     "typescript": "^4.4.4",
     "xlorpaste": "workspace:*",
     "zx": "^4.2.0"
-  }
+  },
+  "packageManager": "pnpm@7.0.0"
 }
