--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
+    "vue.volar",
     "antfu.vite",
-    "johnsoncodehk.volar",
     "voorjaar.windicss-intellisense"
   ]
 }
