fix: pnpm filter

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "MIT",
   "author": "XLor",
   "scripts": {
-    "build": "pnpm run build --filter ./packages",
+    "build": "pnpm --filter \"./packages/**\" run build",
     "dev:app": "pnpm -C packages/app dev",
     "dev:worker": "pnpm -C packages/worker dev",
     "format": "prettier --write packages/**/*.{ts,js,mjs,vue} --ignore-path .gitignore",
