--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^17.0.4",
+    "@types/node": "^17.0.29",
+    "cross-env": "^7.0.3",
     "husky": "^1.2.0",
     "lint-staged": "^11.0.0",
+    "miniflare": "^2.4.0",
     "pnpm": "^7.0.0",
     "prettier": "^2.3.2",
     "tslib": "^2.3.1",
