--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -2,24 +2,18 @@
   "name": "@xlorpaste/worker",
   "version": "0.0.1",
   "private": true,
-  "description": "A template for kick starting a Cloudflare Workers project",
+  "description": "XLorPaste Worker",
   "license": "MIT",
   "author": "XLor <yjl9903@vip.qq.com>",
-  "main": "dist/index.js",
   "scripts": {
-    "build": "tsup src/index.ts",
-    "dev": "wrangler dev"
+    "build": "cross-env NITRO_PRESET=cloudflare nitropack build",
+    "dev": "nitropack dev",
+    "preview": "miniflare .output/server/index.mjs --site .output/public"
   },
   "dependencies": {
     "xlorpaste": "workspace:*"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^3.0.0",
-    "@types/node": "^17.0.4",
-    "@types/service-worker-mock": "^2.0.1",
-    "pnpm": "^6.24.2",
-    "prettier": "^2.3.2",
-    "tsup": "^4.14.0",
-    "typescript": "^4.4.4"
+    "nitropack": "^0.4.0"
   }
 }
