--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -10,12 +10,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: pnpm/action-setup@v2
-      - uses: actions/setup-node@v3
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2
+      
+      - name: Setup node
+        uses: actions/setup-node@v3
         with:
           node-version: 14
           cache: pnpm
-      - run: pnpm install
+
+      - name: Install
+        run: pnpm install
+
+      - name: Build worker
+        run: pnpm build:worker
+        env:
+          NITRO_PRESET: cloudflare
+
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
