--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -15,6 +15,7 @@
     "markdown-it": "^12.3.2",
     "markdown-it-math": "^4.1.1",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "qrcode": "^1.5.0",
     "shiki": "^0.10.0",
     "vue": "^3.2.29",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@iconify/json": "^1.1.450",
     "@types/katex": "^0.11.1",
+    "@types/nprogress": "^0.2.0",
     "@unocss/preset-uno": "^0.18.0",
     "@unocss/preset-wind": "^0.18.0",
     "@vitejs/plugin-vue": "^2.0.0",
