--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "XLor",
   "scripts": {
     "build": "pnpm --filter \"./packages/**\" run build",
+    "build:app": "pnpm -C packages/app build",
     "build:worker": "pnpm -C packages/worker build",
     "dev:app": "pnpm -C packages/app dev",
     "dev:worker": "pnpm -C packages/worker dev",
