--- a/packages/worker/package.json
+++ b/packages/worker/package.json
@@ -15,6 +15,7 @@
     "xlorpaste": "workspace:*"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.9.0",
     "nitropack": "^0.4.0",
     "unstorage": "^0.4.1"
   }
