chore!: upgrade deps

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
+  "name": "@xlorpaste/monorepo",
   "private": "true",
   "license": "MIT",
   "author": "XLor",
   "scripts": {
-    "build": "pnpm --filter \"./packages/**\" run build",
+    "build": "pnpm -r run build",
     "build:app": "pnpm -C packages/app build",
     "build:worker": "pnpm -C packages/worker build",
     "dev:app": "pnpm -C packages/app dev",
@@ -11,32 +12,15 @@
     "format": "prettier --write packages/**/*.{ts,js,mjs,vue} --ignore-path .gitignore",
     "release": "bumpp packages/*/package.json --commit --push --tag && pnpm publish -r --access public"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": [
-      "prettier --parser=typescript --write"
-    ],
-    "*.vue": [
-      "prettier --parser=vue --write"
-    ]
-  },
   "devDependencies": {
-    "@types/node": "^17.0.29",
-    "bumpp": "^7.1.1",
+    "@types/node": "^18.6.1",
     "cross-env": "^7.0.3",
-    "husky": "^1.2.0",
-    "lint-staged": "^11.0.0",
-    "miniflare": "^2.4.0",
-    "prettier": "^2.3.2",
-    "tslib": "^2.3.1",
-    "tsup": "^4.14.0",
-    "typescript": "^4.4.4",
-    "xlorpaste": "workspace:*",
-    "zx": "^4.2.0"
+    "miniflare": "^2.6.0",
+    "optc": "^0.3.4",
+    "prettier": "^2.7.1",
+    "tslib": "^2.4.0",
+    "tsup": "^6.2.0",
+    "typescript": "^4.7.4"
   },
-  "packageManager": "pnpm@7.0.0"
+  "packageManager": "pnpm@7.6.0"
 }
