--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -9,33 +9,33 @@
     "typecheck": "vue-tsc --noEmit -p package.json --resolveJsonModule --skipLibCheck"
   },
   "dependencies": {
-    "@chenfengyuan/vue-qrcode": "^2.0.0-rc.1",
-    "date-fns": "^2.28.0",
+    "@chenfengyuan/vue-qrcode": "^2.0.0",
+    "date-fns": "^2.29.1",
     "github-markdown-css": "^5.1.0",
-    "katex": "^0.15.2",
-    "markdown-it": "^12.3.2",
+    "katex": "^0.16.0",
+    "markdown-it": "^13.0.1",
     "markdown-it-math": "^4.1.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "qrcode": "^1.5.0",
-    "shiki": "^0.10.0",
-    "vue": "^3.2.29",
-    "vue-router": "4",
+    "qrcode": "^1.5.1",
+    "shiki": "^0.10.1",
+    "vue": "^3.2.37",
+    "vue-router": "4.1.3",
     "xlorpaste": "workspace:*"
   },
   "devDependencies": {
-    "@iconify/json": "^1.1.450",
-    "@types/katex": "^0.11.1",
+    "@iconify/json": "^2.1.84",
+    "@types/katex": "^0.14.0",
     "@types/nprogress": "^0.2.0",
-    "@unocss/preset-uno": "^0.18.0",
-    "@unocss/preset-wind": "^0.18.0",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4",
-    "unocss": "^0.18.0",
-    "unplugin-icons": "^0.13.0",
-    "vite": "^2.7.13",
-    "vite-plugin-md": "^0.11.7",
-    "vue-tsc": "^0.31.1"
+    "@unocss/preset-uno": "^0.44.7",
+    "@unocss/preset-wind": "^0.44.7",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4",
+    "unocss": "^0.44.7",
+    "unplugin-icons": "^0.14.7",
+    "vite": "^3.0.3",
+    "vite-plugin-md": "^0.20.0",
+    "vue-tsc": "^0.39.0"
   }
 }
