--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,6 +23,7 @@
     "shiki": "^0.10.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3",
+    "wastyle": "^0.0.5",
     "xlorpaste": "workspace:*"
   },
   "devDependencies": {
