--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,6 +10,10 @@
     {
       "matchManagers": ["github-actions"],
       "automerge": true
+    },
+    {
+      "matchManagers": ["gradle"],
+      "enabled": false
     }
   ],
   "rangeStrategy": "bump"
