--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "release": "bumpp packages/*/package.json --commit --push --tag && pnpm publish -r --access public"
   },
   "devDependencies": {
-    "@types/node": "^18.6.1",
+    "@types/node": "^20.16.7",
     "cross-env": "^7.0.3",
-    "miniflare": "^2.9.0",
-    "optc": "^0.4.1",
-    "prettier": "^2.7.1",
-    "tslib": "^2.4.0",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.4"
+    "wrangler": "^3.78.9",
+    "optc": "^0.6.4",
+    "prettier": "^3.3.3",
+    "tslib": "^2.7.0",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.2"
   },
-  "packageManager": "pnpm@7.13.1"
+  "packageManager": "pnpm@9.11.0"
 }
