--- a/.github/workflows/worker.yml
+++ b/.github/workflows/worker.yml
@@ -11,15 +11,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v4
       
       - name: Setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 14
+          node-version: 20
           cache: pnpm
 
       - name: Install
@@ -31,7 +31,7 @@ jobs:
           NITRO_PRESET: cloudflare
 
       - name: Publish
-        uses: cloudflare/wrangler-action@2.0.0
+        uses: cloudflare/wrangler-action@v3
         with:
           workingDirectory: ./packages/worker
           apiToken: ${{ secrets.CF_API_TOKEN }}
