--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -11,35 +11,36 @@
   },
   "dependencies": {
     "@chenfengyuan/vue-qrcode": "^2.0.0",
-    "@vueuse/core": "^9.13.0",
+    "@vueuse/core": "^11.1.0",
     "date-fns": "^2.29.1",
-    "github-markdown-css": "^5.1.0",
-    "katex": "^0.16.8",
+    "github-markdown-css": "^5.6.1",
+    "katex": "^0.16.11",
     "markdown-it": "^13.0.1",
     "markdown-it-math": "^4.1.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "qrcode": "^1.5.1",
-    "shiki": "^0.11.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
+    "qrcode": "^1.5.4",
+    "shiki": "^1.18.0",
+    "vue": "^3.5.8",
+    "vue-router": "^4.4.5",
     "wastyle": "^0.0.5",
     "xlorpaste": "workspace:*"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.21",
-    "@iconify-json/mdi": "^1.1.54",
-    "@types/katex": "^0.16.3",
+    "@iconify-json/carbon": "^1.2.1",
+    "@iconify-json/mdi": "^1.2.0",
+    "@types/katex": "^0.16.7",
     "@types/nprogress": "^0.2.0",
-    "@unocss/reset": "^0.45.26",
-    "@vitejs/plugin-vue": "^3.1.2",
+    "@unocss/reset": "^0.62.4",
+    "@vitejs/plugin-vue": "^5.1.4",
     "happy-dom": "^6.0.4",
-    "unocss": "^0.45.26",
-    "unplugin-auto-import": "0.11.2",
-    "vite": "^3.1.4",
-    "vite-plugin-info": "^0.3.1",
-    "vite-plugin-md": "^0.20.4",
-    "vite-plugin-pages": "^0.26.0",
-    "vue-tsc": "^0.40.13"
+    "unocss": "^0.62.4",
+    "unplugin-auto-import": "0.18.3",
+    "unplugin-info": "^1.1.0",
+    "vite": "^5.4.8",
+    "vite-plugin-json5": "^1.1.2",
+    "vite-plugin-md": "^0.21.5",
+    "vite-plugin-pages": "^0.32.3",
+    "vue-tsc": "^2.1.6"
   }
 }
