--- a/packages/app/tsconfig.json
+++ b/packages/app/tsconfig.json
@@ -21,7 +21,7 @@
     "strict": true,
     "target": "ESNext",
     "types": [
-      "vite-plugin-info/client",
+      "unplugin-info/client",
       "vite-plugin-pages/client"
     ],
     "useDefineForClassFields": true
