--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "devDependencies": {
     "@types/node": "^20.16.7",
     "cross-env": "^7.0.3",
-    "wrangler": "^3.78.9",
     "optc": "^0.6.4",
     "prettier": "^3.3.3",
     "tslib": "^2.7.0",
     "tsup": "^8.3.0",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "wrangler": "^3.78.9"
   },
   "packageManager": "pnpm@9.11.0"
 }
