--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -35,6 +35,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "happy-dom": "^6.0.4",
     "unocss": "^0.62.4",
+    "unplugin-analytics": "^0.0.12",
     "unplugin-auto-import": "0.18.3",
     "unplugin-info": "^1.1.0",
     "vite": "^5.4.8",
